updating frontend to v.0.0.2
Texte für Frontseite sind da, Impressum ist da, Grafik hinzugefügt

--- a/frontend_0.0.2/src/app/footer/footer.component.css
+++ b/frontend_0.0.2/src/app/footer/footer.component.css
@@ -4,6 +4,13 @@
     bottom: 80px;
 }
 
+@media screen and (max-width: 1000px) {
+    .container {
+        bottom: 40px;
+    }
+
+}
+
 .content {
     display: flex;
     justify-content: space-around;
