--- a/frontend_0.0.2/src/app/footer/footer.component.html
+++ b/frontend_0.0.2/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="content">
         <div class="impressum-link">
             <p>We Are Art: </p>
-            <h1>Impressum</h1>
+            <h1 routerLink="/imprint">Impressum</h1>
         </div>
     </div>
 </div>
