--- a/frontend_0.0.2/src/app/register/register.component.html
+++ b/frontend_0.0.2/src/app/register/register.component.html
@@ -1,18 +1,18 @@
 <div class="container">
     <div class="content">
-        <h1>We Are Art</h1>
-        <p>Melde dich jetzt bei We Are Art an um bei unserem Pilotprojekt dabei zu sein!</p>
+        <h1>Interessiert?</h1>
+        <p class="text">Dann melde dich jetzt fuer unser Pilotprojekt an. Wir werden dich kontaktieren, sobald wir mit <em>We Are Art</em> in die Alpha Phase Uebergehen.</p>
         <label>Name</label>
         <input name="name" type="text" class="input" placeholder="enter your name*" [(ngModel)]="name">
         <label>Email</label>
         <input type ="email" class="input" placeholder="enter your email*" [(ngModel)]="email">
-        <label>Mobile (optional)</label>
+        <label>Mobil (optional)</label>
         <input type ="text" class="input" placeholder="enter your phone (optional)" [(ngModel)]="mobile">
-        <label>Hometown (optional)</label>
+        <label>Stadt (optional)</label>
         <input type ="text" class="input" placeholder="enter your hometown (optional)" [(ngModel)]="hometown">
-        <label>What art do you do? (optional)</label>
+        <label>Welche Kunst machst du? (optional)</label>
         <textarea class="input textfield" placeholder="What art do you do?" [(ngModel)]="art"></textarea>
-        <label>Any Questions? (optional)</label>
+        <label>Noch Fragen? (optional)</label>
         <textarea class="input last" placeholder="questions / ideas?" [(ngModel)]="questions"></textarea>
 
         <!--BUTTON-->
