--- a/frontend_0.0.2/src/app/header/header.component.html
+++ b/frontend_0.0.2/src/app/header/header.component.html
@@ -4,6 +4,6 @@
             <h2 routerLink="/about">Ueber uns</h2>
             <h2 routerLink="/register">Registrieren</h2>
         </div>
-        <div class="logo"></div>
+        <div class="logo" routerLink="/about"></div>
     </div>
 </div>
